# applaudio

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  forge.recipe.toml
.github/workflows/: build-test-macos.yml  build-test-ubuntu.yml  release-linux.yml
Test/: build_linux.sh  build_macos.sh  main.cpp  setup_and_build_debian.sh  test.cpp
Test/applaudio_test/: applaudio_test.sln  applaudio_test.vcxproj  applaudio_test.vcxproj.filters
applaudio.xcodeproj/: project.pbxproj
cmake/: applaudioConfig.cmake.in
include/applaudio/: AudioEngine.h  Backend_Linux_ALSA.h  Backend_MacOS_CoreAudio.h  Backend_NoAudio.h  Backend_Windows_WASAPI.h  Buffer.h  IApplaudio_Internal.h  IBackend.h  LinAlg.h  Linux_Internal.h  Listener.h  MacOS_Internal.h  Object3D.h  PositionalAudio.h  Source.h  StringUtils.h  System.h  Win_Internal.h  applaudio.h  defines.h  version.h
